# kino_gripper

./: CMakeLists.txt  README.md  package.xml
include/: dynamixel_ax12_handler.h  gripper_inverse_kinematics.h  kino_gripper.h
resources/CAD/: base.SLDPRT  base_attachement.SLDPRT  central_finger.SLDPRT  central_finger_pad.SLDPRT  central_finger_v2.SLDPRT  end_finger.SLDPRT  end_finger_v2.SLDPRT  finger_tip.SLDPRT  finger_tip_pad.SLDPRT  kino_gripper.SLDASM  outer_finger.SLDPRT  outer_finger_v2.SLDPRT  pad.SLDPRT  right-finger-gear.SLDPRT  spur gear_iso.sldprt  step_down_converter.SLDPRT  tunable-gear.SLDPRT  uab2ax.SLDPRT  ~$finger_tip_pad.SLDPRT
resources/CAD/dynamixel_AX-12A/: AX-12A-01.SLDPRT  AX-12A-02.SLDPRT  AX-12A-03.SLDPRT  AX-12A-04.SLDPRT  AX-12A.SLDASM  SetScrew.SLDPRT
resources/CAD/hebi_actuators/X5/: X5-1.SLDPRT  X5-9.SLDPRT
resources/CAD/hebi_actuators/X8/: X8-16.SLDPRT  X8-9.SLDPRT
resources/STL/: base_attachement.STL  base_test.STL  central_finger.STL  central_finger_left.STL  central_finger_pad.STL  end_finger.STL  end_finger_left.STL  finger_tip.STL  finger_tip_left.STL  finger_tip_pad_left.STL  finger_tip_pad_right.STL  finger_tip_thick_pad.STL  finger_tip_thick_pad_left.STL  left_finger_gear.STL  outer_finger.STL  outer_finger_left.STL  right_finger_gear.STL
resources/documentation/: .~lock.kino_gripper_schematics.odg#  kino_gripper_assembly.md  kino_gripper_kinematics.md  kino_gripper_schematics.odg
src/: dynamixel_cpp_sample.cpp  kino_gripper_node.cpp
src/kino_gripper/: dynamixel_ax12_handler.cpp  dynamixel_ax12_handler.h  gripper_inverse_kinematics.cpp  kino_gripper.cpp
